--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h1 class="title">Olá <br>eu sou a Évelim Dornelles</h1>
 
             <div class="information">
-                <p> Estudante de Ciência da Computação</p>
-                <p> Rio Grande do Sul - RS</p>
-                <p> (53) 99127 - 7491</p>
-                <p> dorrrnelles@gmail.com</p>
+                <p class="Perfil"> Estudante Ciência da Computação</p>
+                <p class="localizacao"> Rio Grande do Sul - RS</p>
+                <p class="whatsapp"> (53) 99127 - 7491</p>
+                <p class="email"> dorrrnelles@gmail.com</p>
 
             </div>
     </div>
