--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="assets/css/acordeon.css">
     <link rel="stylesheet" href="assets/css/languages.css">
     <link rel="stylesheet" href="/assets/css/projetos.css">
-    <link rel="stylesheet" href="assets/css/experience.css">
+    <link rel="stylesheet" href="/assets/css/experience.css">
+    <link rel="stylesheet" href="/assets/css/skills.css">
+    <link rel="stylesheet" href="/assets/css/faculty.css">
+    <link rel="shortcut icon" href="assets/img/fav.png" type="image/x-icon">
 </head>
 
 <body>
@@ -34,47 +37,18 @@
                 </p>
             </div>
         </header>
-
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2> Idiomas</h2>
+                <h2> Formação Acadêmica</h2>
             </button>
             <div class="content">
                 <div>
-                    <ul class="languages">
-                        <li>Português (BR) - Nativo</li>
-                        <li>Inglês - Básico</li>
-                        <li>Espanhol - Básico</li>
-                        <li>Libras - Básico</li>
+                    <ul class="faculty">
+                        <li>Turismo - Universidade Federal de Pelotas (2015 - 2019)</li>
+                        <li>Ciência da Computação - Faculdade Estácio (2024 - Atual)</li>
                     </ul>
                 </div>
             </div>
-        </section>
-
-        <section class="acordeon ">
-            <button class="trigger" type="button">
-                <h2> Projetos</h2>
-            </button>
-
-            <div class="content">
-                <ul class="projetos">
-                    <li>
-                        <span class="title github">Agência Digital</span>
-                        <a href="https://github.com/evedc/agencia-digital"
-                            target="_blank">https://github.com/evedc/agencia-digital</a>
-                    </li>
-                    <li>
-                        <span class="title github">Pokedex</span>
-                        <a href="https://github.com/evedc/pokedex" target="_blank">https://github.com/evedc/pokedex</a>
-                    </li>
-                    <li>
-                        <span class="title github">Projeto 3</span>
-                        <a href="www.google.com.br" target="_blank">www.google.com.br</a>
-                    </li>
-                </ul>
-
-            </div>
-
         </section>
 
         <section class="acordeon">
@@ -112,8 +86,95 @@
                 </ul>
 
             </div>
+        </section>
+        <section class="acordeon">
+            <button class="trigger" type="button">
+                <h2> Habilidades </h2>
+            </button>
+
+            <div class="content">
+                <div class="skills">
+                    <section class="tools">
+                        <span class="title"> Profissionais: </span>
+
+                        <ul>
+                            <li>
+                                <img src="/assets/img/html.png" alt="HTML" title="html">
+                            </li>
+                            <li>
+                                <img src="/assets/img/css.png" alt="CSS" title="css">
+                            </li>
+                            <li>
+                                <img src="/assets/img/javascript.png" alt="JAVASCRIPT" title="javascript">
+                            </li>
+                            <li>
+                                <img src="/assets/img/git.png" alt="GIT" title="git">
+                            </li>
+                            <li>
+                                <img src="/assets/img/github2.png" alt="GITHUB" title="github">
+                            </li>
+                        </ul>
+                    </section>
+                    <section class="personal">
+                        <span class="title"> Pessoais: </span>
+                        <ul>
+                            <li>Trabalho em Equipe</li>
+                            <li>Organização</li>
+                            <li>Disciplina</li>
+                            <li>Comunicação</li>
+                        </ul>
+
+                    </section>
+
+                </div>
+            </div>
+        </section>
+        <section class="acordeon ">
+            <button class="trigger" type="button">
+                <h2> Projetos</h2>
+            </button>
+
+            <div class="content">
+                <ul class="projetos">
+                    <li>
+                        <span class="title github">Agência Digital</span>
+                        <a href="https://github.com/evedc/agencia-digital"
+                            target="_blank">https://github.com/evedc/agencia-digital</a>
+                    </li>
+                    <li>
+                        <span class="title github">Portfólio 02</span>
+                        <a href="https://github.com/evedc/evelimdornelles"
+                            target="_blank">https://github.com/evedc/evelimdornelles</a>
+                    </li>
+                    <li>
+                        <span class="title github">Pokedex</span>
+                        <a href="https://github.com/evedc/pokedex" target="_blank">https://github.com/evedc/pokedex</a>
+                    </li>
+
+                </ul>
+
+            </div>
 
         </section>
+        <section class="acordeon">
+            <button class="trigger" type="button">
+                <h2> Idiomas</h2>
+            </button>
+            <div class="content">
+                <div>
+                    <ul class="languages">
+                        <li>Português (BR) - Nativo</li>
+                        <li>Inglês - Básico</li>
+                        <li>Espanhol - Básico</li>
+                        <li>Libras - Básico</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+
+    </div>
+    </section>
     </div>
 
 
