--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         dorrrnelles@gmail.com
                     </a>
                 </p>
+
+                <p class="linkedin"> <a href="https://www.linkedin.com/in/evelimcardozo/"
+                        target="_blank">/evelimcardozo/</a></p>
             </div>
         </header>
         <section class="acordeon">
