correção de bugs

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <link rel="stylesheet" href="assets/css/experience.css">
     <link rel="stylesheet" href="assets/css/skills.css">
     <link rel="stylesheet" href="assets/css/faculty.css">
-    <link rel="shortcut icon" href="assets/img/fav.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/fav.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="main">
         <header class="header">
-            <img src="/img/imgperfil.png" alt="Foto de Perfil Évelim" class="photo">
+            <img src="img/imgperfil.png" alt="Foto de Perfil Évelim" class="photo">
 
             <h1 class="title">Olá, <br>eu sou a Évelim Dornelles</h1>
 
@@ -62,27 +62,27 @@
             <div class="content">
                 <ul class="experience">
                     <li>
-                        <span class="title"> <a href="/img/Certificado FullStack.png" target="_blank">
+                        <span class="title"> <a href="img/Certificado FullStack.png" target="_blank">
                                 Programador Web Completo - Do Zero ao FullStack - Genial
                                 Cursos </a></span>
                     </li>
 
                     <li>
                         <span class="title">
-                            <a href="/img/Certificado AWS.png" target="_blank"> AWS Cloud Practitioner Essentials
+                            <a href="img/Certificado AWS.png" target="_blank"> AWS Cloud Practitioner Essentials
                                 -
                                 Amazon Web Services (AWS) </a></span>
                     </li>
                     </li>
                     <li>
                         <span class="title">
-                            <a href="/img/LógicaDeProgramacao.png" target="_blank">
+                            <a href="img/LógicaDeProgramacao.png" target="_blank">
                                 Lógica de Programação - Trybe
                             </a></span>
                     </li>
                     <li>
                         <span class="title">
-                            <a href="/img/JSdoZero.png" target="_blank">
+                            <a href="img/JSdoZero.png" target="_blank">
                                 Javascript do Zero - Trybe
                             </a></span>
                     </li>
@@ -102,19 +102,19 @@
 
                         <ul>
                             <li>
-                                <img src="/img/html.png" alt="HTML" title="html">
+                                <img src="img/html.png" alt="HTML" title="html">
                             </li>
                             <li>
-                                <img src="/img/css.png" alt="CSS" title="css">
+                                <img src="img/css.png" alt="CSS" title="css">
                             </li>
                             <li>
-                                <img src="/img/javascript.png" alt="JAVASCRIPT" title="javascript">
+                                <img src="img/javascript.png" alt="JAVASCRIPT" title="javascript">
                             </li>
                             <li>
-                                <img src="/img/git.png" alt="GIT" title="git">
+                                <img src="img/git.png" alt="GIT" title="git">
                             </li>
                             <li>
-                                <img src="/img/github2.png" alt="GITHUB" title="github">
+                                <img src="img/github2.png" alt="GITHUB" title="github">
                             </li>
                         </ul>
                     </section>
