--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     </a>
                 </p>
 
-                <p class="linkedin"> <a href="https://www.linkedin.com/in/evelimcardozo/"
-                        target="_blank">/evelimcardozo/</a></p>
+                <p class="linkedin"> <a href="https://www.linkedin.com/in/evedornelles/"
+                        target="_blank">/evedornelles/</a></p>
             </div>
         </header>
         <section class="acordeon">
